# eth-ledger-plugin

./: Makefile  README.md  pyproject.toml
src/: handle_finalize.c  handle_init_contract.c  handle_provide_parameter.c  handle_provide_token.c  handle_query_contract_id.c  handle_query_contract_ui.c  main.c  p2p_staking.h
tests/: package.json
tests/networks/ethereum/p2p-staking/: b2c.json
tests/src/: deposit.test.js  fixtures.js  generate_plugin_config.js  stake.test.js  test.fixture.js  withdraw.test.js
